--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
+title: Bad Data
 baseurl: /bad-data
-sourcecode: http://github.com/okfn/bad-data/
+github: http://github.com/okfn/bad-data/
 markdown: kramdown
+googleanalytics: UA-33874954-3
